# adapter-sdk

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  netlify.toml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dco.yml  docs.yml  release.yml
adapters/: index.html  ner_bert_adapter.py
adapters/all-minilm/: index.html
adapters/bart-large-cnn/: index.html
adapters/bart-large-mnli/: index.html
adapters/clinicalbert/: index.html
adapters/clip-vit-base-patch32/: index.html
adapters/docling/: index.html
adapters/finbert/: index.html
adapters/ms-marco/: index.html
adapters/ner-bert/: index.html
adapters/ner-clinical/: index.html
adapters/openai-classifier/: index.html
adapters/opus-mt-en-fr/: index.html
adapters/twitter-roberta/: index.html
adapters/whisper-large-v3/: index.html
architecture/: index.html
assurance/: index.html
docs/: _headers  architecture.md  assurance.md  demo.html  index.md  security.md
docs/adapters/: all-minilm.md  bart-large-cnn.md  bart-large-mnli.md  clinicalbert.md  clip-vit-base-patch32.md  docling.md  finbert.md  index.md  ms-marco.md  ner-bert.md  ner-clinical.md  openai-classifier.md  opus-mt-en-fr.md  twitter-roberta.md  whisper-large-v3.md
docs/getting-started/: first-adapter.md  installation.md  validation.md
docs/overrides/: main.html
docs/reference/: adapter-base.md  caches.md  canonical-ir.md  validator.md
getting-started/first-adapter/: index.html
getting-started/installation/: index.html
getting-started/validation/: index.html
reference/adapter-base/: index.html
reference/caches/: index.html
reference/canonical-ir/: index.html
reference/validator/: index.html
search/: search_index.json
security/: index.html
site/: 404.html  index.html  sitemap.xml
site/adapters/: index.html
site/adapters/ner-bert/: index.html
site/getting-started/first-adapter/: index.html
site/getting-started/installation/: index.html
site/getting-started/validation/: index.html
site/reference/adapter-base/: index.html
site/reference/caches/: index.html
site/reference/canonical-ir/: index.html
site/reference/validator/: index.html
site/search/: search_index.json
src/adapters/: __init__.py  ner_bert_adapter.py
src/synapse_sdk/: __init__.py  base.py  cache.py  cli.py  local.py  testing.py  tracing.py  types.py  validator.py
src/synapse_sdk/testing/: __init__.py  fixtures.py
tests/: test_adapter.py  test_branch_provenance.py  test_caches.py  test_cli.py  test_fixtures.py  test_ir.py  test_local.py  test_ner_bert_adapter.py  test_partial_failure.py  test_properties.py  test_tracing.py  test_validator.py
