[project]
name = "synapse-adapter-sdk"
version = "0.1.1"
description = "The intelligence layer above the AI protocol layer — canonical IR and adapter framework for heterogeneous AI model pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "SYNAPSE Contributors" }
]
keywords = ["ai", "llm", "adapter", "pipeline", "interoperability", "mcp", "a2a", "canonical-ir", "synapse"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/synapse-ir/adapter-sdk"
Documentation = "https://github.com/synapse-ir/spec"
Repository = "https://github.com/synapse-ir/adapter-sdk"
"Bug Tracker" = "https://github.com/synapse-ir/adapter-sdk/issues"
Changelog = "https://github.com/synapse-ir/adapter-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
synapse-validate = "synapse_sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse_sdk"]

[dependency-groups]
dev = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pytest>=9.0.3",
]
